# demo-niiet-cmake

./: .gitmodules  README.md
k1921vg015/01-default/: CMakeLists.txt  Reset.JLinkScript  main.cpp
k1921vg015/01-default/cmake/: gcc-riscv-none-elf.cmake
k1921vg015/01-default/platform/retarget/Template/K1921VG015/: retarget.c
k1921vg015/rtt-default/: CMakeLists.txt  K1921VG015.jdebug  K1921VG015.svd  SEGGER_RTT_Conf.h  main.cpp  syscalls.c  version.h
k1921vg015/rtt-default/RTT/: CMakeLists.txt
k1921vg015/rtt-default/platform/: CMakeLists.txt
k1921vg015/rtt-default/platform/Device/K1921VG015/ldscripts/: k1921vg015_common.lds
k1921vg015/rtt-default/platform/Device/K1921VG015/source/: mtimer.c  plic.c
k1921vg015/rtt-default/platform/retarget/: printf.c
k1921vg015/rtt-default/platform/retarget/Template/K1921VG015/: retarget.h
k1921vg015/rtt-default/platform/unix_time/: unix_time.c  unix_time.h
k1921vg015/rtt-default/tools/: niiet-aspect-1.0.1.vsix
k1921vg015/rtt-default/tools/openocd/: k1921vg015_jlink_service_mode_erase.bat  k1921vg015_onboard_ftdi_service_mode_erase.bat  k1921vg015_sipeed-rv_service_mode_erase.bat  k1921vg3t_jlink_service_mode_erase.bat  k1921vg5t_jlink_service_mode_erase.bat  k1921vg7t_jlink_service_mode_erase.bat
k1921vg015/rtt-default/tools/openocd/openocd-snippets/: README.md
k1921vg015/rtt-default/tools/openocd/openocd-snippets/k1921vg015/: connect_jlink_jtag.cfg  connect_onboard_ftdi.cfg  connect_sipeed-rv.cfg
k1921vg015/rtt-default/tools/openocd/openocd-snippets/k1921vg3t/: connect_jlink_jtag.cfg  srv_erase.cfg
k1921vg015/rtt-default/tools/openocd/openocd-snippets/k1921vg5t/: connect_jlink_jtag.cfg  srv_erase.cfg
k1921vg015/rtt-default/tools/openocd/openocd-snippets/k1921vg7t/: connect_jlink_jtag.cfg  srv_erase.cfg
k1921vg015/rtt-default/tools/openocd/scripts/board/: k1921vg5t.cfg
k1921vg015/rtt-default/tools/openocd/scripts/interface/ftdi/: sipeed-rv-debugger.cfg  vg015_dev_onboard_ftdi.cfg
k1921vg015/segger-flash-loader/: CMakeLists.txt  K1921VG015.xml  README.md  loader.ld
k1921vg015/segger-flash-loader/include/: FlashOS.h
k1921vg015/segger-flash-loader/platform/: CMakeLists.txt
k1921vg015/segger-flash-loader/platform/Device/K1921VG015/include/: K1921VG015.h  plic.h
k1921vg015/segger-flash-loader/platform/Device/K1921VG015/source/: system_k1921vg015.c
k1921vg015/segger-flash-loader/platform/plib015/: RELEASE.md
k1921vg015/segger-flash-loader/platform/plib015/inc/: plib015_conf.h  plib015_rcu.h  plib015_version.h
k1921vg015/segger-flash-loader/platform/plib015/src/: plib015_adcsar.c  plib015_adcsd.c  plib015_crc.c  plib015_crypto.c  plib015_dma.c  plib015_flash.c  plib015_hash.c  plib015_qspi.c  plib015_trng.c  plib015_wdt.c
k1921vg015/segger-flash-loader/src/: loader.c
modules/RTT/Config/: SEGGER_RTT_Conf.h
modules/RTT/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c
modules/RTT/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
modules/RTT/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
